syntax = "proto3";

package bfg.proto.parameters;

message ReducedSlice {
}
